@@ -51,6 +51,7 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
   e - from Simon Toth: If no available amount is specified for a resource 
       and the max limit is set, the requirement should be checked against 
       the maximum only (for scheduler, bugzilla 23). 
+  b - check return values from fwrite in cpuset.c to avoid warnings
 
 2.4.8
   e - Bugzilla bug 22. HIGH_PRECISION_FAIRSHARE for fifo scheduling.
